# connect-iq-sdk-manager-cli

./: .gitignore  BUILD.bazel  MODULE.bazel
cmd/: BUILD.bazel
internal/client/: BUILD.bazel
internal/connectiq/: BUILD.bazel
internal/datetime/: BUILD.bazel
internal/manager/: BUILD.bazel
internal/oauth/: BUILD.bazel
internal/storage/: BUILD.bazel
tests/: BUILD.bazel
tools/readme-docs/: BUILD.bazel  main.go
