module(
    name = "connect_iq_sdk_manager_cli",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_deckarep_golang_set_v2",
    "com_github_masterminds_semver_v3",
    "com_github_olekukonko_tablewriter",
    "com_github_pkg_errors",
    "com_github_puerkitobio_goquery",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "in_gopkg_ini_v1",
    "org_golang_x_exp",
)
