load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd-agreement.go",
        "cmd-agreement-accept.go",
        "cmd-agreement-view.go",
        "cmd-device.go",
        "cmd-device-download.go",
        "cmd-device-list.go",
        "cmd-login.go",
        "cmd-root.go",
        "cmd-sdk.go",
        "cmd-sdk-current-path.go",
        "cmd-sdk-download.go",
        "cmd-sdk-list.go",
        "cmd-sdk-set.go",
        "cmd-version.go",
        "config.go",
        "device.go",
        "logging.go",
        "shared.go",
    ],
    importpath = "github.com/lindell/connect-iq-sdk-manager-cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/manager",
        "@com_github_masterminds_semver_v3//:semver",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)
