load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "connectiq",
    srcs = [
        "config.go",
        "fs.go",
        "groups.go",
        "simulator.go",
        "token.go",
        "urls.go",
    ],
    importpath = "github.com/lindell/connect-iq-sdk-manager-cli/internal/connectiq",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_ini_v1//:ini_v1",
    ],
)
