load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "oauth",
    srcs = ["oauth.go"],
    embedsrcs = ["done.html"],
    importpath = "github.com/lindell/connect-iq-sdk-manager-cli/internal/oauth",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)
